Fix distortion caused by adding border to cells

--- a/app/assets/stylesheets/pixels.css.scss
+++ b/app/assets/stylesheets/pixels.css.scss
@@ -12,8 +12,8 @@ table.pixels {
      border-collapse: collapse;
      padding: 0;
      margin: 0;
-     width: 5px;
-     height: 5px;
+     width: 4px;
+     height: 4px;
      cursor: crosshair;
      border: solid 1px #d1d1d1;
    }  
